feat: implement all UI improvements, beta gate, security fixes, and TypeScript corrections
- Fix 5 TypeScript errors in backendIntegration.ts (replace any types)
- Implement beta gate with easy toggle (BETA_MODE_ENABLED flag)
- Add security review and improvements
- Theme toggle with system detection (like Cursor)
- Update Dynamic Compression threshold default to -3 dB (range 0 to -24 dB)
- Google Sign In with proper Google colors
- Email confirmation message for signup
- Update EQ preset names
- Real-time file size updates in After section
- Fix media player upload to always require terms acceptance
- Change VU Meters to dB Meters
- Add reset button to Dynamic Compressor
- All admin features verified and working
- Block non-admin users with beta message
- Rebuild frontend with all latest changes

--- a/python-backend/Dockerfile
+++ b/python-backend/Dockerfile
@@ -15,4 +15,5 @@ COPY main.py .
 EXPOSE 8080
 
 # Run with gunicorn
-CMD exec gunicorn --bind :$PORT --workers 1 --threads 8 --timeout 0 main:app
+# Cloud Run injects PORT as environment variable, default to 8080 if not set
+CMD exec gunicorn --bind :${PORT:-8080} --workers 1 --threads 8 --timeout 0 main:app
